# stupidb

./: .editorconfig  .envrc  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .releaserc.json  .releaserc.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  default.nix  flake.nix  mkdocs.yml  mypy.ini  poetry-overlay.nix  poetry-overrides.nix  pre-commit.nix  pyproject.toml  readthedocs.yaml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  shell.nix  tox.ini
.direnv/: cache-unknown  drv
.github/: ISSUE_TEMPLATE.md  dependabot.yaml  renovate.json
.github/workflows/: auto-rebase-dispatch.yml  auto-rebase-on-push.yml  auto-rebase.yml  check-requirements.yml  ci.yml  codeql-analysis.yml  lockfile-maintenance.yml  release.yml  update-deps.yaml  update-deps.yml  update-requirements.yml
ci/release/: dry_run.sh  publish.sh  run.sh  verify.sh
docs/: Makefile  api.md  conf.py  index.md  index.rst  installation.md  installation.rst  make.bat  modules.rst  stupidb.aggregatetypes.rst  stupidb.aggregation.rst  stupidb.aggregator.rst  stupidb.animate.rst  stupidb.api.rst  stupidb.associative.rst  stupidb.bitset.rst  stupidb.core.rst  stupidb.indextree.rst  stupidb.navigation.rst  stupidb.protocols.rst  stupidb.ranking.rst  stupidb.reversed.rst  stupidb.row.rst  stupidb.rst  stupidb.segmenttree.rst  stupidb.stupidb.rst  stupidb.typehints.rst  usage.md  usage.rst
nix/: default.nix  sources.json
stupidb/: __init__.py  aggregatetypes.py  aggregation.py  aggregator.py  animate.py  api.py  associative.py  bitgraph.py  bitset.py  cli.py  comparable.py  core.py  indextree.py  joinalgorithms.py  navigation.py  parser.py  protocols.py  ranking.py  reversed.py  row.py  segmenttree.py  stupidb.py  typehints.py  window.py
stupidb/associative/: animate.py  bitgraph.py  bitset.py  indextree.py  segmenttree.py
stupidb/db/: checker.py  codegen.py  optimizer.py  parser.py  schema.py  stringtree.py  syntax.py  typed.py  typedsyntax.py  visitor.py
stupidb/db/antlr/: sql.g4
stupidb/functions/associative/: __init__.py  core.py
stupidb/functions/navigation/: __init__.py  core.py
stupidb/functions/ranking/: __init__.py  core.py
stupidb/tests/: conftest.py  test_animate.py  test_associative.py  test_bitgraph.py  test_bitset.py  test_index_tree.py  test_navigation.py  test_protocols.py  test_ranking.py  test_reversed.py  test_row.py  test_set_operations.py  test_stupidb.py
tests/: conftest.py  mypy.ini  test.sql  test_animate.py  test_associative.py  test_bitset.py  test_index_tree.py  test_navigation.py  test_protocols.py  test_ranking.py  test_reversed.py  test_row.py  test_segmenttree.py  test_set_operations.py  test_stupidb.py
