[tool.poetry]
name = "stupidb"
version = "6.0.2"
packages = [{ include = "stupidb" }]
homepage = "https://github.com/cpcloud/stupidb"
repository = "https://github.com/cpcloud/stupidb"
documentation = "https://stupidb.readthedocs.io"
description = "The stupidest of all the databases."
authors = ["Phillip Cloud <cpcloud@gmail.com>"]
maintainers = ["Phillip Cloud <cpcloud@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7"
atpublic = "^2.3"
toolz = "^0.11"
pydot = { version = "^1.4.2", optional = true }
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
Sphinx = "^4.2.0"
black = "21.9b0"
coverage = "^6"
flake8 = "^4.0.1"
isort = "^5.9.3"
mypy = "^0.910"
pydocstyle = "^6.1.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.10.1"
pytest-xdist = "^2.3.0"
pyupgrade = "^2.28.1"
sphinx-autodoc-typehints = "^1.12.0"

[tool.poetry.extras]
animation = ["pydot"]

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = ["stupidb/__init__.py:__version__", "docs/conf.py:version"]
branch = "master"
upload_to_pypi = true
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
  "--ignore=site-packages",
  "--ignore=dist-packages",
  "--ignore=.direnv",
  "--strict-markers",
  "--doctest-modules",
]
markers = ["animate"]
norecursedirs = ["site-packages", "dist-packages", ".direnv"]

[tool.black]
line_length = 88

[tool.isort]
line_length = 88
profile = "black"

[tool.pydocstyle]
convention = "numpy"
add_ignore = ["D105", "D213", "D203"]
match-dir = "stupidb"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
